# expresso

./: .gitignore  Cargo.toml  README.md  codecov.yml  rust-toolchain.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
common/src/midi/: message.rs
core/: Cargo.toml
core/src/: lib.rs  settings.rs
core/src/midi/: encoding.rs  mod.rs
core/src/midi/encoding/: din.rs  mod.rs  traits.rs  usb.rs
expresso/: Cargo.toml
expresso/src/: config.rs  connector.rs  lib.rs  router.rs  settings.rs  sysex.rs
expresso/src/component/: error.rs  mod.rs  traits.rs
expresso/src/expression/: channel.rs  group.rs  mod.rs  test_utils.rs
expresso/src/midi/: mod.rs  traits.rs  types.rs
expresso/src/midi/encoding/: din.rs  mod.rs  test_utils.rs  usb.rs
expresso/src/settings/: expression_channel.rs  expression_group.rs  mod.rs  patch.rs  settings.rs  status.rs  update.rs
expresso/src/status/: mod.rs  state.rs  types.rs
fw/: Cargo.toml  expresso.ioc
fw/src/: collector.rs  config.rs  din_midi.rs  expression.rs  flash_store.rs  main.rs  midi.rs  router.rs  status_led.rs  types.rs  usb_midi.rs
hw/: Debug_Connector.kicad_sch_old  Expression Input.kicad_sch  Expression_Inputs.kicad_sch  Expresso Enclosure Laser Cut Parts Projection.dxf  Expresso Enclosure Laser Cut Parts Raw.dxf  Expresso Enclosure Laser Cut Parts.ai  Expresso Enclosure Laser Cut Parts.dxf  Expresso.kicad_pcb  Expresso.kicad_pro  Expresso.kicad_sch  Expresso.kicad_sch_old  Expresso.step  Microcontroller.kicad_sch  Microcontroller.kicad_sch_old  Midi Connector.kicad_sch  Midi Connector.kicad_sch_old  Power_Supply.kicad_sch  Power_Supply.kicad_sch_old  USB_Connector.kicad_sch_old  fp-info-cache  fp-lib-table
hw/enclosure/: Expresso Enclosure Laser Cut Engravings.dxf  Expresso Enclosure Laser Cut Parts Projection.dxf  Expresso Enclosure Laser Cut Parts.ai  Expresso Enclosure Laser Cut Parts.dxf  Expresso Logo.ai
hw/enclosure/Expresso Enclosure Panels/: Expresso Enclosure Backpanel.kicad_pcb  Expresso Enclosure Backpanel.kicad_pro  Expresso Enclosure Frontpanel.kicad_pcb  Expresso Enclosure Frontpanel.kicad_pro
hw/enclosure/Expresso Enclosure Panels/jlcpcb/: project.db
hw/enclosure/fabrication/: Expresso Enclosure.3mf
hw/jlcpcb/: project.db
hw/jlcpcb/gerber/: Expresso-CuBottom.gbr  Expresso-CuIn1.gbr  Expresso-CuIn2.gbr  Expresso-CuTop.gbr  Expresso-EdgeCuts.gbr  Expresso-MaskBottom.gbr  Expresso-MaskTop.gbr  Expresso-NPTH.drl  Expresso-PTH.drl  Expresso-PasteBottom.gbr  Expresso-PasteTop.gbr  Expresso-SilkBottom.gbr  Expresso-SilkTop.gbr
hw/lib/: Midi_Expressor.bak  Midi_Expressor.kicad_sym
hw/lib/DIN5_MIDI_MultiGround.pretty/: DIN5_MIDI_MultiGround.kicad_mod
hw/lib/LED_THT_6Pin.pretty/: LED_D5.0mm_6Pin.kicad_mod
hw/lib/NE5532DR.pretty/: NE5532DR.kicad_mod
hw/lib/SOP-6-2.54mm.pretty/: SOP-6_6.35x8.51mm_P02.54mm.kicad_mod
sw/: eslint.config.ts  package-lock.json  package.json  vite.config.ts
sw/src/: App.vue  device_config.rs  main.css  main.rs  main.ts  ui.rs
sw/src-tauri/: Cargo.toml  tauri.conf.json
sw/src-tauri/src/: lib.rs  main.rs
sw/src/components/: ChannelStrip.vue
sw/src/theme/: config.rs
sw/src/theme/widget/: knob.rs  mod.rs  (+3 more)
sw/src/types/: settings.ts
tests/renode/peripherals/: rcc_stm32g4.py
tests/renode/scripts/: expresso.resc
tests/renode/tests/: boot.robot
xtask/: Cargo.toml
xtask/src/: main.rs
(+9 files in other folders)
