[package]
name = "expresso-fw"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = ["defmt", "stm32g431cb", "unstable-pac", "memory-x", "time-driver-tim1", "exti", "chrono"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.8.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.2.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.9", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.9.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/stm32f4" }
]
