[package]
name = "expresso-fw"
version = "1.0.1"
edition = "2024"

[dependencies]
expresso = { path = "../expresso" }

embassy-stm32 = { version = "0.5.0", features = [
    "defmt",
    "stm32g431cb",
    "memory-x",
    "time-driver-tim2",
    "exti",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
postcard = { version = "1", default-features = false }

